--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "webpack-config": "^7.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.config.js"
   },
   "author": "michaelpratt",
   "license": "ISC"
