--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "html-loader": "^0.4.5",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.0.0",
     "webpack-config": "^7.0.0"
   },
