--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "devDependencies": {
     "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
     "html-es6-template-loader": "^1.0.5",
     "html-loader": "^0.4.5",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "uglifyjs-webpack-plugin": "^0.4.6",
+    "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-config": "^7.0.0"
   },
